docs: 修正 Swagger 接口路径
